--- a/example_index.html
+++ b/example_index.html
@@ -15,7 +15,7 @@
         href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.2/mapbox-gl-geocoder.css"
         type="text/css">
     <!-- mapbox geocoder link -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="example_style.css">
     <!--Linking style sheet-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -92,7 +92,7 @@
         </div>
 
 <!-- script -->
-<script src="script.js"></script>
+<script src="example_script.js"></script>
 
 </body>
 
