--- a/index.html
+++ b/index.html
@@ -53,16 +53,19 @@
                         <ul class="dropdown-menu">
                             <!--Heat Relief Straegy Link-->
                             <li>
-                                <a class="dropdown-item" href="https://www.toronto.ca/community-people/health-wellness-care/health-programs-advice/hot-weather/about-torontos-heat-relief-strategy/" target="_blank">
-                                Toronto's Heat Relief Strategy</a>
+                                <a class="dropdown-item"
+                                    href="https://www.toronto.ca/community-people/health-wellness-care/health-programs-advice/hot-weather/about-torontos-heat-relief-strategy/"
+                                    target="_blank">
+                                    Toronto's Heat Relief Strategy</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
                             <!--Urban Heat Island Info-->
                             <li>
-                                <a class="dropdown-item" href="https://climateatlas.ca/urban-heat-island-effect" target="_blank">Urban
-                                Heat Island Information</a>
+                                <a class="dropdown-item" href="https://climateatlas.ca/urban-heat-island-effect"
+                                    target="_blank">Urban
+                                    Heat Island Information</a>
                             </li>
                         </ul>
                     </li>
@@ -72,13 +75,20 @@
                     </li>
                 </ul>
                 </li>
+            </div>
+        </div>
+    </nav>
 
-   <!-- Linking external JavaScript files (note - need the second link for dropdown menu to work) -->
-   <script src="script.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-       crossorigin="anonymous"></script>
+    <!-- Adding map to webpage -->
+    <div id="my-map" class="map-container"></div>
+
+    <!-- Linking external JavaScript files (note - need the second link for dropdown menu to work) -->
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
-
