--- a/index.html
+++ b/index.html
@@ -88,7 +88,18 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
-
+        <div id="map"></div>
+        <div id="legend">
+            <h3>Heat Relief Points</h3>
+            <div><span style="background-color: #1659cc;"></span> Community Centres</div>
+            <div><span style="background-color: #e3a92b;"></span> Library</div>
+            <div><span style="background-color: #5c99b5;"></span> Mall</div>
+            <div><span style="background-color: #1b79d1;"></span> Pool</div>         
+            <div><span style="background-color: #795cbf;"></span> Shelter Services</div>
+            <h3>Color Schemes</h3>
+            <div><span2 style="background-color: #3a7e54;"></span2> Greenspace</div>
+        </div>
+        
 </body>
 
 </html>
