About Us updated

--- a/aboutus.html
+++ b/aboutus.html
@@ -101,20 +101,29 @@
                 </div>
             </div>
             <div class="card">
-                <img src="images/Natali.png" class="card-img-top" alt="...">
+                <img src="images/Natali.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Natali Keckesova</h5>
                     <p class="card-text"> 
-                        About Natali...
+                        Natali is a third-year student at the University of Toronto pursuing a 
+                        double major in Environmental Geography and Human Geography with a Focus 
+                        in Planning, and a minor in GIS. She is particularly interested in 
+                        examining accessibility to public spaces and active transportation. 
+                        In her spare time, she loves to explore the outdoors and see the green 
+                        spaces Toronto has to offer.
                     </p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/Owen.png" class="card-img-top" alt="...">
+                <img src="images/Owen.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Owen Darling</h5>
                     <p class="card-text"> 
-                        About Owen... 
+                        Owen is a fourth-year student at the University of Toronto, pursuing a 
+                        specialization in Human Geography with a Focus in planning.  From his 
+                        studies Owen is looking to pursue a career in planning after his studies 
+                        are completed. Outside of school Owen is passionate about the outdoors 
+                        and enjoys camping and hiking.
                     </p>
                 </div>
             </div>
