--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     Temperature
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="buffbutton" checked>
+                    <input class="form-check-input" type="checkbox" value="" id="buffcheck" checked>
                     Buffer
                 </div>
             </div>
