--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
                             </li>
                         </ul>
                     </li>
-                    <!-- Brings you to About Us -->
+                    <!-- Data -->
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="data.html">Data</a>
+                    </li>
+                    <!-- About Us -->
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="aboutus.html">About Us</a>
                     </li>
@@ -109,7 +113,7 @@
                     Temperature
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="buffcheck" checked>
+                    <input class="form-check-input" type="checkbox" value="" id="buffcheck" unchecked>
                     Buffer
                 </div>
             </div>
@@ -117,14 +121,22 @@
             <!-- Adding Legend -->
             <div id="legend">
                 <h5> Heat Relief Points </h5>
-                <div><span style="background-color: #1659cc;"></span> Community Centres </div>
-                <div><span style="background-color: #e3a92b;"></span> Library </div>
-                <div><span style="background-color: #5c99b5;"></span> Mall </div>
-                <div><span style="background-color: #1b79d1;"></span> Pool </div>
-                <div><span style="background-color: #795cbf;"></span> Shelter Services </div>
+                <div><span style="background-color: #CA6F1E;"></span> Community Centres </div>
+                <div><span style="background-color: #00c1bd;"></span> Library </div>
+                <div><span style="background-color: #2E4053;"></span> Mall </div>
+                <div><span style="background-color: #2e3ac1;"></span> Pool </div>
+                <div><span style="background-color: #640b89;"></span> Shelter Services </div>
                 <br>
-                <h5>Color Schemes</h5>
+                <h5> Color Schemes </h5>
                 <div><span2 style="background-color: #3a7e54;"></span2> Greenspace </div>
+                <br>
+                <h5>Mean Temperature</h5>
+                <div><span2 style="background-color: #fee5d9;"></span2> 27&deg;C </div>
+                <div><span2 style="background-color: #fcbba1;"></span2> 28&deg;C </div>
+                <div><span2 style="background-color: #fc9272;"></span2> 29&deg;C </div>
+                <div><span2 style="background-color: #fb6a4a;"></span2> 30&deg;C </div>
+                <div><span2 style="background-color: #de2d26;"></span2> 31&deg;C </div>
+                <div><span2 style="background-color: #a50f15;"></span2> 32&deg;C </div>
             </div>
         </div>
         
