Updated Canue logo

--- a/data.html
+++ b/data.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="images/favicon.ico" class="card-img-top img-fluid" alt="...">
+                <img src="images/canue.png" class="card-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Canue Data Portal</h5>
                     <p class="card-text"> 
