Changed Buffer to Isochrone and tidied up
Careful adding to main -
things changed
- Point size as you zoom out
- Buffer to isochrone API (10 minute walk time around point)
- Readme
- Made data folder (need to change source link when added to main)
- deleted redundant data (still need to delete example files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- Turf.js -->
     <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
+    <!-- Assembly (maybe - refine non-map elements) -->
+  <link href='https://api.mapbox.com/mapbox-assembly/v1.3.0/assembly.min.css' rel='stylesheet'>
+  <script src='https://api.mapbox.com/mapbox-assembly/v1.3.0/assembly.js'></script>
 </head>
+
 
 <body>
     <!-- Bootstrap navbar -->
@@ -86,6 +90,7 @@
         </div>
     </nav>
 
+
     <!-- Map and Sidebar container -->
     <div class="content-container">
 
@@ -113,8 +118,8 @@
                     Temperature
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="buffcheck" unchecked>
-                    Buffer
+                    <input class="form-check-input" type="checkbox" value="" id="isochroneCheck" unchecked>
+                    10min Walk Range
                 </div>
             </div>
 
@@ -139,27 +144,9 @@
                 <div><span2 style="background-color: #a50f15;"></span2> 32&deg;C </div>
             </div>
         </div>
-        
+
     </div>
 
-    <!-- Adding and removing layers
-    <div class='map-data-container'>
-        <label>Add/Remove Layers</label>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="parkcheck" checked>
-            Green Spaces
-        </div>
-
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="pointcheck" checked>
-            Heat Relief Network
-        </div>
-
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="tempcheck" checked>
-            Temperature
-        </div>
-    </div> -->
     
     <!-- Linking external JavaScript files (note - need the second link for dropdown menu to work) -->
     <script src="script.js"></script>
